// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioSVGMap component Rendering displays map with custom props 1`] = `
<DocumentFragment>
  <div>
    <svg
      aria-label="label"
      class="className"
      role="radiogroup"
      viewBox="viewBox"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        aria-checked="false"
        aria-label="name0"
        class="locationClassName"
        d="path0"
        id="id0"
        name="name0"
        role="radio"
        tabindex="0"
      />
      <path
        aria-checked="false"
        aria-label="name1"
        class="locationClassName"
        d="path1"
        id="id1"
        name="name1"
        role="radio"
        tabindex="-1"
      />
      <path
        aria-checked="false"
        aria-label="name2"
        class="locationClassName"
        d="path2"
        id="id2"
        name="name2"
        role="radio"
        tabindex="-1"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`RadioSVGMap component Rendering displays map with default props 1`] = `
<DocumentFragment>
  <div>
    <svg
      aria-label="label"
      class="svg-map"
      role="radiogroup"
      viewBox="viewBox"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        aria-checked="false"
        aria-label="name0"
        class="svg-map__location"
        d="path0"
        id="id0"
        name="name0"
        role="radio"
        tabindex="0"
      />
      <path
        aria-checked="false"
        aria-label="name1"
        class="svg-map__location"
        d="path1"
        id="id1"
        name="name1"
        role="radio"
        tabindex="-1"
      />
      <path
        aria-checked="false"
        aria-label="name2"
        class="svg-map__location"
        d="path2"
        id="id2"
        name="name2"
        role="radio"
        tabindex="-1"
      />
    </svg>
  </div>
</DocumentFragment>
`;
